--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="layout-4-item-left"><img src="images/home-01-654x515.png" alt="" width="654" height="515"/>
+        <div class="layout-4-item-left"><img src="https://okcredit-blog-images-prod.storage.googleapis.com/2020/12/shutterstock_522186031.jpg" alt="" width="654" height="515"/>
         </div>
       </div>
       <!-- Our Solutions-->
@@ -337,7 +337,7 @@
         </div>
       </section>
 
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"/></a>
+      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://1.bp.blogspot.com/-c0uezghHEKU/X4u-TV40NyI/AAAAAAAAgYE/5IqciA48LOEZhXIm-TF-vCAiZOJtUPiqwCLcBGAsYHQ/s1350/Sad%2BQuotes%2Bfor%2BWhatsapp%2BDp%2Band%2BStatus%2B%25281%2529.jpg" alt="" height="0"/></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
           <div class="container">
