--- a/about-us.html
+++ b/about-us.html
@@ -426,7 +426,7 @@
           <h3>Testimonials</h3>
           <div class="owl-carousel owl-carousel_type-1" data-items="1" data-dots="true" data-nav="true" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false">
             <!-- Quote Classic-->
-            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="images/testimonials-1-102x102.jpg" alt="" width="102" height="102"/>
+            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="https://media.istockphoto.com/id/1135381120/photo/portrait-of-a-young-woman-outdoors-smiling.jpg?s=612x612&w=0&k=20&c=T5dukPD1r-o0BFqeqlIap7xzw07icucetwKaEC2Ms5M="  alt="" width="102" height="102"/>
               <div class="quote-classic-text">
                 <p>Ut velit ocurreret consequuntur sed, his atqui officiis inimicus cu. Vix ei munere persecuti incorrupte. Pri erat neglegentur eu, te qui admodum mandamus constituto, ad vis tale tibique. Mei possim</p>
               </div>
@@ -436,7 +436,7 @@
               </div>
             </blockquote>
             <!-- Quote Classic-->
-            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="images/testimonials-2-102x102.jpg" alt="" width="102" height="102"/>
+            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="https://www.shutterstock.com/image-photo/man-suit-looks-camera-smiles-260nw-606177233.jpg" alt="" width="102" height="102"/>
               <div class="quote-classic-text">
                 <p>Cu facer nobis feugait mel, his velit tation ea, ut zril legimus postulant vix. Ad ipsum oblique est, ea laudem putant eam. Habeo doming feugait has eu. Et essent principes reprimique sea, quaestio</p>
               </div>
@@ -446,7 +446,7 @@
               </div>
             </blockquote>
             <!-- Quote Classic-->
-            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="images/testimonials-3-102x102.jpg" alt="" width="102" height="102"/>
+            <blockquote class="quote-classic"><img class="quote-classic-avatar" src="https://www.shutterstock.com/image-photo/portrait-young-investor-banker-workplace-260nw-2364566447.jpg" alt="" width="102" height="102"/>
               <div class="quote-classic-text">
                 <p>Vide etiam apeirian qui cu, ex sea habemus eligendi assentior. Et adversarium instructior per. Ad tale saepe pri, quo te melius principes. Iudico tempor vis in. Vel laudem appareat singulis et, eum</p>
               </div>
@@ -465,16 +465,16 @@
           <h3>Our Clients</h3>
           <!-- Owl Carousel-->
           <div class="owl-carousel owl-carousel-centered" data-items="2" data-sm-items="3" data-md-items="4" data-lg-items="5" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false">
-            <div class="wow clipInLeft"><a class="link-image-1" href="#"><img src="images/investor-1-88x77.png" alt="" width="88" height="77"/></a></div>
-            <div class="wow clipInLeft" data-wow-delay=".1s"><a class="link-image-1" href="#"><img src="images/investor-2-73x78.png" alt="" width="73" height="78"/></a></div>
-            <div class="wow clipInLeft" data-wow-delay=".2s"><a class="link-image-1" href="#"><img src="images/investor-3-96x62.png" alt="" width="96" height="62"/></a></div>
-            <div class="wow clipInLeft" data-wow-delay=".3s"><a class="link-image-1" href="#"><img src="images/investor-4-78x80.png" alt="" width="78" height="80"/></a></div>
-            <div class="wow clipInLeft" data-wow-delay=".4s"><a class="link-image-1" href="#"><img src="images/investor-5-87x76.png" alt="" width="87" height="76"/></a></div>
+             <div class="wow clipInLeft"><a class="link-image-1" href="#"><img src="https://www.shutterstock.com/image-photo/professional-male-lawyer-financial-advisor-600nw-2016949892.jpg" alt="" width="88" height="77"/></a></div>
+            <div class="wow clipInLeft" data-wow-delay=".1s"><a class="link-image-1" href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRJCgIOxOh-L-XV46REkiNjYsQ_rMiDfN1Bg&s" alt="" width="73" height="78"/></a></div>
+            <div class="wow clipInLeft" data-wow-delay=".2s"><a class="link-image-1" href="#"><img src="https://www.shutterstock.com/image-photo/team-diverse-partners-sitting-table-260nw-2343004291.jpg" alt="" width="96" height="62"/></a></div>
+            <div class="wow clipInLeft" data-wow-delay=".3s"><a class="link-image-1" href="#"><img src="https://www.shutterstock.com/image-photo/two-business-executives-discussing-financial-260nw-2356241977.jpg" alt="" width="78" height="80"/></a></div>
+            <div class="wow clipInLeft" data-wow-delay=".4s"><a class="link-image-1" href="#"><img src="https://img.freepik.com/free-photo/happy-real-estate-agent-shaking-hands-with-couple-meeting-office_637285-6117.jpg" alt="" width="87" height="76"/></a></div>
           </div>
         </div>
       </section>
 
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"/></a>
+      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://th.bing.com/th/id/OIP.EVkzXxiKojgcdQkPk7e3lQHaED?w=792&h=434&rs=1&pid=ImgDetMain" alt="" height="0"/></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
           <div class="container">
