--- a/typography.html
+++ b/typography.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"/></a>
+      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://as1.ftcdn.net/v2/jpg/03/29/33/20/1000_F_329332096_9Rcwy4WPuQZNrLqXs3MpSzMHMlA5AT39.jpg" alt="" height="0"/></a>
       <header class="section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
@@ -186,7 +186,7 @@
           </div>
         </div>
       </section>
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"/></a>
+      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://th.bing.com/th/id/OIP.8yTSud8UIwXvbiUTQGelpAHaDd?w=900&h=421&rs=1&pid=ImgDetMain" alt="" height="0"/></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
           <div class="container">
