--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"/></a>
+      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://www.shutterstock.com/image-vector/contact-us-icon-set-vector-260nw-2075561314.jpg" alt="" height="0"/></a>
       <header class="section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
@@ -176,7 +176,7 @@
           </div>
         </div>
       </section>
-      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"/></a>
+      <!-- Page Footer--><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://cdn.pixabay.com/photo/2021/10/29/06/47/icons-6751206_1280.png" alt="" height="0"/></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
           <div class="container">
