--- a/contacts.html
+++ b/contacts.html
@@ -13,11 +13,11 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="https://editkaro.in/images/logo-default-399x82.png" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="https://www.shutterstock.com/image-vector/contact-us-icon-set-vector-260nw-2075561314.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader" id="loading">
       <div class="preloader-body">
         <div id="loading-center-object">
-          <div class="object" id="object_four"></div>
+          <div class="object" id="object_four"></div> 
           <div class="object" id="object_three"></div>
           <div class="object" id="object_two"></div>
           <div class="object" id="object_one"></div>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://www.shutterstock.com/image-vector/contact-us-icon-set-vector-260nw-2075561314.jpg" alt="" height="0"/></a>
+      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="https://editkaro.in/images/logo-default-399x82.png" alt="" height="0"/></a>
       <header class="section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
