--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="https://th.bing.com/th/id/OIP.K-cdOFV2LMfxWY95sPmypAHaE3?rs=1&pid=ImgDetMain" alt="" height="42" width="820" ></a></div>
+    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="https://lucky123-dotcom.github.io/ramana/images/ie8-panel/warning_bar_0000_us.jpg" alt="" height="42" width="820" ></a></div>
     <div class="preloader" id="loading">
       <div class="preloader-body">
         <div id="loading-center-object">
