--- a/about-us.html
+++ b/about-us.html
@@ -206,7 +206,7 @@
           <div class="owl-carousel owl-carousel_profile-modern" data-items="1" data-sm-items="2" data-lg-items="3" data-xl-items="4" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false">
             <!-- Profile Modern-->
             <article class="profile-modern">
-              <figure class="profile-modern-figure"><img class="https://news.miami.edu/_assets/images-stories/2020/10/zoomfounder-hero-940x529.jpg" alt="" width="369" height="315"/>
+              <figure class="profile-modern-figure"><img class="https://th.bing.com/th/id/OIP.w_KndJo2G5sTOLkuky0n0AHaE7?rs=1&pid=ImgDetMain" alt="" width="369" height="315"/>
               </figure>
               <div class="profile-modern-main">
                 <div class="profile-modern-main-item profile-modern-main-item_primary">
@@ -226,7 +226,7 @@
             </article>
             <!-- Profile Modern-->
             <article class="profile-modern">
-              <figure class="profile-modern-figure"><img class="https://1.bp.blogspot.com/-LXEqEPSIRWY/WwJxfPKQloI/AAAAAAAAAMo/YmgNywqzew4k7pLqLrI7O7nK9sUXua4nACLcBGAs/s1600/Market-Research-Analyst-Job-Description-Salary.jpg" alt="" width="369" height="315"/>
+              <figure class="profile-modern-figure"><img class="https://res.cloudinary.com/sbcaus/image/upload/v1613716872/ea20dd/eefoopnd1hucqgbrofiq.jpg" alt="" width="369" height="315"/>
               </figure>
               <div class="profile-modern-main">
                 <div class="profile-modern-main-item profile-modern-main-item_primary">
